number to currency

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -2,7 +2,7 @@
 <h2><%= pluralize(@events.size, 'Evènement')%></h2>
 <ul>
 	<% @events.each do |e| %>
-	<li> <strong><%= e.name %></strong> in <%= e.location %> <%= number_to_currency (e.price), unit: " €", format: "%n %u" %>  - Description: <%= e.description%></li>
+	<li> <strong><%= e.name %></strong> in <%= e.location %> <%= number_to_currency (e.price), unit: " €", format: "%n %u" %><br>Description: <br><%= e.description%></li>
 	<% end %>
 
 </ul>
